<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="26dp"
    tools:context=".Profile">


    <TextView
        android:id="@+id/ame_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name_hint" />

    <TextView
        android:id="@+id/profile_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:gravity="center_horizontal" />

    <Space
        android:layout_width="330dp"
        android:layout_height="12dp" />


    <TextView
        android:id="@+id/age_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_age_hint" />

    <TextView
        android:id="@+id/profile_age_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:gravity="center_horizontal" />

    <Space
        android:layout_width="330dp"
        android:layout_height="12dp" />

    <TextView
        android:id="@+id/salary_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_salary_title" />

    <TextView
        android:id="@+id/salary_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:gravity="center_horizontal" />

    <Space
        android:layout_width="330dp"
        android:layout_height="12dp" />

    <TextView
        android:id="@+id/profile_update_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_update_prompt" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_hint" />
    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="330dp"
        android:layout_height="12dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="2"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_user_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_age_hint" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/salary_title_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_salary_hint" />

    <RadioGroup
        android:id="@+id/radioGroupSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_income_button1"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_income_button2"/>

        <RadioButton
            android:id="@+id/radio_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_income_button3"/>
    </RadioGroup>

    <Space
        android:layout_width="330dp"
        android:layout_height="12dp" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_button" />

</LinearLayout>